# rust-simple-api

./: Cargo.toml
src/: main.rs
src/controller/: register_controller.rs
src/router/: index.rs
