[package]
name = "rust-simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.20"
routerify = "3.0.0"
routerify-json-response = "3.0.0"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
